syntax = "proto3";
//package temperature_grpc;
option go_package = "/grpcInterfaces";

message GetRequest {
  string duration = 1;
}

message SetRequest {
  int32 sensorId = 1;
  int32 temperature = 2;
}

message MeasurementsDataResult {
  string value = 1;
}

message Empty {
}

service TemperatureMeasurementsService {
  rpc getMeasurementsData(GetRequest) returns (MeasurementsDataResult) {}
  rpc setMeasurementData(SetRequest) returns (Empty) {}
}